:DDDDD Article Dictionary

--- a/chrome-extension/popup.html
+++ b/chrome-extension/popup.html
@@ -10,9 +10,16 @@
   <body id="body">
     <h3>PTT Hate Speech Tagger</h3>
     <label class="switch">
-      <input id="toggle" type="checkbox">
-      <span class="slider round"></span>
+    <input id="toggle" type="checkbox">
+    <span class="slider round"></span>
     </label>
+    <a>Enable Toolkit</a>
+    <hr style="height:1px;border-width:0;color:rgb(196, 196, 196);background-color:rgb(196, 196, 196)">
+    <button id="token" type="button" class="collapsible">Change Token</button>
+    <hr style="height:1px;border-width:0;color:rgb(196, 196, 196);background-color:rgb(196, 196, 196)">
+    <button id="tutorial" type="button" class="collapsible">Tutorial</button>
+    <hr style="height:1px;border-width:0;color:rgb(196, 196, 196);background-color:rgb(196, 196, 196)">
+    <button id="website" type="button" class="collapsible">Website</button>
     <script src="./popup.js"></script>
   </body>
 </html>
