--- a/rank.html
+++ b/rank.html
@@ -8,7 +8,10 @@
 </head>
 
 <body>
-    <h1>黑名單排行榜</h1>
+    <h1>排行榜</h1>
+    <label>帳號</label><br>
+    <input type="text" id="id"><br>
+    <input type="submit" value="查詢" onclick="submit()"><br><br>
 
     <p><span id="ranking"></span></p>
     <script src="js/rank.js"></script>
