--- a/home.html
+++ b/home.html
@@ -19,16 +19,16 @@
 
     <div class="container">
         <div class="section">
-            <h2>黑名單查詢</h2>
+            <h2>關於</h2>
             <hr>
-            <form>輸入 PTT ID：<input type="text" name="id" id="searchinput"></form>
-            <button id="searchbutton" type="button" onclick="submit()">GO!</button>
+            <a>哈囉</a>
         </div>
-        <div class="section" id="result">
+        <div class="section">
+            <h2>Info</h2>
+            <hr>
+            <a>哈囉</a>
         </div>
     </div>
-
-    <script src="scripts/search.js"></script>
     <script src="scripts/main.js"></script>
 </body>
 
