--- a/chrome-extension/popup.html
+++ b/chrome-extension/popup.html
@@ -17,10 +17,14 @@
     <hr style="height:1px;border-width:0;color:rgb(196, 196, 196);background-color:rgb(196, 196, 196)">
     <button id="token" type="button" class="collapsible">Change Token</button>
     <hr style="height:1px;border-width:0;color:rgb(196, 196, 196);background-color:rgb(196, 196, 196)">
+    <button id="resettoken" type="button" class="collapsible">Reset Token</button>
+    <hr style="height:1px;border-width:0;color:rgb(196, 196, 196);background-color:rgb(196, 196, 196)">
     <button id="tutorial" type="button" class="collapsible">Tutorial</button>
     <hr style="height:1px;border-width:0;color:rgb(196, 196, 196);background-color:rgb(196, 196, 196)">
     <button id="website" type="button" class="collapsible">Website</button>
+    
     <script src="./popup.js"></script>
+
   </body>
 </html>
 
