Home and tutorial

--- a/home.html
+++ b/home.html
@@ -17,14 +17,23 @@
 
     <div class="container">
       <div class="section">
-        <h2>關於</h2>
+        <h2>關於 PTT 仇恨言論標註器</h2>
         <hr>
-        <a>哈囉</a>
+        <p data-original-title="" title="">
+          <span>這是一個 Chrome 插件，能夠一鍵標記 PTT 上的仇恨言論。</span>
+        </p>
+        <p>
+          <strong><span>排行榜</span></strong><span>：查看被標記數最多的前十名 PTT ID</span><br>
+          <strong><span>黑名單查詢</span></strong><span>：輸入 PTT ID 後，查詢此人被標記的仇恨言論</span>
+        </p>  
+        <p>
+          <span>創建帳號後，可以使用自己的帳號標註，並查看自己的排行榜，詳情見</span><strong><span>使用說明</span></strong>
+        </p>
       </div>
       <div class="section">
         <h2>Info</h2>
         <hr>
-        <a>哈囉</a>
+        Email: ptt.hate.speech.tagger@gmail.com
       </div>      
     </div>
     <script src="scripts/main.js"></script>
