--- a/rank.html
+++ b/rank.html
@@ -22,8 +22,11 @@
         <div class="section">
             <h2>排行榜</h2>
             <hr>
-            <form>輸入我的 Hypothesis ID：<input type="text" name="id" id="searchinput"></form>
-            <button id="searchbutton" type="button" onclick="submit()">GO!</button>
+            <form>
+                <a>輸入我的 Hypothesis ID：</a><input type="text" name="id" id="searchinput">
+                <button class="searchbutton" id="searchbutton" type="button" onclick="submit()">GO!</button>
+            </form>
+            
         </div>
         <div class="section" id="chart_div">
         </div>
