--- a/tutorial.html
+++ b/tutorial.html
@@ -26,9 +26,9 @@
             <h3 id="下載-Chrome-插件" data-id="下載-Chrome-插件"><a class="anchor hidden-xs" href="#下載-Chrome-插件"
                     title="下載-Chrome-插件"><span class="octicon octicon-link"></span></a><span>下載 Chrome 插件</span></h3>
             <ol>
-                <li><span>打開 </span><a href="https://github.com/celestine1305/PTTHateSpeechTagger/tree/cele"
+                <li><span>打開 </span><a href="https://github.com/celestine1305/PTTHateSpeechTagger/tree/chrome-extension"
                         target="_blank"
-                        rel="noopener"><span>https://github.com/celestine1305/PTTHateSpeechTagger/tree/cele</span></a>
+                        rel="noopener"><span>https://github.com/celestine1305/PTTHateSpeechTagger/tree/chrome-extension</span></a>
                 </li>
                 <li><span>點選右上角綠色 </span><strong><span>Code</span></strong><span> -&gt; </span><strong><span>Download
                             ZIP</span></strong><br>
@@ -54,7 +54,7 @@
                         Enable Toolkit 的滑桿打開</span><br>
                     <img src="https://i.imgur.com/R5okH8t.png" alt="" loading="lazy">
                 </li>
-                <li><span>會跳出一個視窗詢問你的 Token，可以先按取消來關閉</span></li>
+                <li><span>點選 <strong>Change Token</strong> 可以更改成自己的 Hypothesis 帳號（詳見<strong>申請個人帳號</strong>）</span></li>
                 <li><span>點選 </span><strong><span>標註這篇文章</span></strong><span>，按下
                     </span><strong><span>確定</span></strong><span> 即可標註內文</span><br>
                     <img src="https://i.imgur.com/WaE3Qhm.png" alt="" loading="lazy">
@@ -67,8 +67,8 @@
                         class="octicon octicon-link"></span></a><span>查看排行榜</span></h3>
             <ol>
                 <li><span>點選 </span><strong><span>排行榜</span></strong><span> </span><a
-                        href="http://localhost:8080/rank.html" target="_blank"
-                        rel="noopener"><span>http://localhost:8080/rank.html</span></a></li>
+                        href="https://www.csie.ntu.edu.tw/~b07902010/PTTHateSpeechTagger/rank.html" target="_blank"
+                        rel="noopener"><span>https://www.csie.ntu.edu.tw/~b07902010/PTTHateSpeechTagger/rank.html</span></a></li>
                 <li><span>搜尋欄留空，即為目前所有被標記 ID 的前十名</span></li>
                 <li><span>在想要查看的 ID 上點一下</span></li>
                 <li><span>點選 </span><strong><span>查詢此帳號</span></strong><span>即可查看該帳號被標注的言論</span><br>
@@ -79,8 +79,8 @@
                         class="octicon octicon-link"></span></a><span>黑名單查詢</span></h3>
             <ol>
                 <li><span>點選 </span><strong><span>黑名單查詢</span></strong><span> </span><a
-                        href="http://localhost:8080/search.html" target="_blank"
-                        rel="noopener"><span>http://localhost:8080/search.html</span></a></li>
+                        href="https://www.csie.ntu.edu.tw/~b07902010/PTTHateSpeechTagger/search.html" target="_blank"
+                        rel="noopener"><span>https://www.csie.ntu.edu.tw/~b07902010/PTTHateSpeechTagger/search.html</span></a></li>
                 <li><span>輸入想要查詢的 PTT ID</span></li>
                 <li><span>點選推文紀錄即可查看該篇文章</span><br>
                     <img src="https://i.imgur.com/ea9T0Fy.png" alt="" loading="lazy">
@@ -89,7 +89,7 @@
             <h2 id="申請個人帳號" data-id="申請個人帳號"><a class="anchor hidden-xs" href="#申請個人帳號" title="申請個人帳號"><span
                         class="octicon octicon-link"></span></a><span>申請個人帳號</span></h2>
             <blockquote>
-                <p><span>若沒有申請個人帳號，則會使用</span><strong><span>公用</span></strong><span>的 Hypothesis 帳號來標註</span></p>
+                <p><span>註：若沒有申請個人帳號，則會使用</span><strong><span>公用</span></strong><span>的 Hypothesis 帳號來標註</span></p>
             </blockquote>
             <h3 id="申請-Hypothesis-Token" data-id="申請-Hypothesis-Token"><a class="anchor hidden-xs"
                     href="#申請-Hypothesis-Token" title="申請-Hypothesis-Token"><span
@@ -121,8 +121,8 @@
                         class="octicon octicon-link"></span></a><span>查看我的排行榜</span></h3>
             <ol>
                 <li><span>點選 </span><strong><span>排行榜</span></strong><span> </span><a
-                        href="http://localhost:8080/rank.html" target="_blank"
-                        rel="noopener"><span>http://localhost:8080/rank.html</span></a></li>
+                        href="https://www.csie.ntu.edu.tw/~b07902010/PTTHateSpeechTagger/rank.html" target="_blank"
+                        rel="noopener"><span>https://www.csie.ntu.edu.tw/~b07902010/PTTHateSpeechTagger/rank.html</span></a></li>
                 <li><span>搜尋欄輸入自己的 Hypothesis ID，即為目前所有被自己標記 ID 的前十名</span></li>
         </div>
     </div>
