--- a/search.html
+++ b/search.html
@@ -21,8 +21,12 @@
         <div class="section">
             <h2>黑名單查詢</h2>
             <hr>
-            <form>輸入 PTT ID：<input type="text" name="id" id="searchinput"></form>
-            <button id="searchbutton" type="button" onclick="submit()">GO!</button>
+            <span class="searchsection">
+                <form>
+                    <a>輸入 PTT ID：</a><input type="text" name="id" id="searchinput">
+                    <button class="searchbutton" id="searchbutton" type="button" onclick="submit()">GO!</button>
+                </form>
+            </span>
         </div>
         <div class="section" id="result">
         </div>
